Card overflow fixes

--- a/client/style/app/menu-dashboard.less
+++ b/client/style/app/menu-dashboard.less
@@ -16,7 +16,7 @@
         }
         .menu-item
         {
-            display: block;
+            display: table;
 
             height: 30px;
             padding: 10px 20px;
