--- a/client/style/app/menu-icon.less
+++ b/client/style/app/menu-icon.less
@@ -17,34 +17,3 @@
         margin: 0 !important;
     }
 }
-
-.main-menu
-{
-    position: relative;
-
-    max-width: 40px;
-    max-height: 40px;
-    margin: 0 auto;
-    padding: 10px;
-    .card
-    {
-        position: relative;
-        top: -50px;
-        left: -2px;
-
-        display: none;
-
-        width: 350px;
-        margin: 0 !important;
-    }
-    .icon
-    {
-        display: inline-block;
-
-        color: @primary-color;
-        &:hover
-        {
-            color: lighten(@primary-color, 10%);
-        }
-    }
-}
