--- a/client/style/app/profile.less
+++ b/client/style/app/profile.less
@@ -38,8 +38,8 @@
     }
     .avatar
     {
-        width: 120px;
-        height: 120px;
+        width: 150px;
+        height: 150px;
         .img
         {
             width: 100%;
